<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical">
<TableLayout
android:id="@+id/contents_new_find"
android:layout_width="fill_parent"
android:layout_height="24sp"
android:textSize="11sp"
android:orientation="vertical"
android:stretchColumns="0,1"
>
<!-- Place for the latitude, longitude labels and EditTexts -->
<TableRow
android:layout_width="fill_parent"
android:layout_height="fill_parent"
> 
<LinearLayout
android:id="@+id/linear_layout_1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
<TextView
android:id="@+id/latitudeLabel"
android:text="@string/latitude"
android:layout_width="80sp"
android:layout_height="fill_parent"
/>
<TextView
android:id="@+id/latitudeText"
android:layout_width="40sp"
android:layout_height="24sp"
android:textSize="11sp"
android:maxLines="1"

/>
</LinearLayout>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
<TextView
android:id="@+id/longitudeLabel"
android:text="@string/longitude"
android:layout_width="80sp"
android:layout_height="fill_parent"
/>
<TextView
android:id="@+id/longitudeText"
android:layout_width="40sp"
android:layout_height="24sp"
android:textSize="11sp"
/>
</LinearLayout> 
</TableRow>
</TableLayout>

<RelativeLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
>
<TextView
android:id="@+id/numberLabel"
android:layout_width="80sp"
android:layout_height="wrap_content"
android:text="@string/numberLabel"
/>
<TextView
android:id="@+id/numberText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_toRight="@id/numberLabel"
/>
<TextView 
android:id="@+id/dateLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_toRight="@id/numberText"
android:text="Date:"
android:paddingLeft ="10sp"
/>
<TextView 
android:id="@+id/dateText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_toRight="@id/dateLabel"
/>
<TextView
android:id="@+id/typeLabel"
android:layout_width="80sp"
android:layout_height="wrap_content"
android:layout_below="@id/numberText"
android:text="@string/typeLabel"
/>
<Spinner android:id="@+id/typeSpinner"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_alignTop="@id/typeLabel"
android:layout_toRight="@id/typeLabel"
android:layout_below="@id/numberText"
android:drawSelectorOnTop="true"
/>
</RelativeLayout>

<LinearLayout
android:layout_width="fill_parent"
android:layout_height="200sp"
android:orientation="vertical"
>

<TextView 
android:id="@+id/descriptionLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/descriptionLabel"
/>
<EditText
android:id="@+id/descriptionText"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:padding="10dip"
android:scrollbars="vertical"
android:fadingEdge="vertical"/>
</LinearLayout>
<RelativeLayout 
android:paddingTop="10sp"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<ImageButton
android:id="@+id/mapButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/map"
android:src="@drawable/direction"
android:gravity ="left"
/>
<ImageButton
android:padding="10sp"
android:id="@+id/cameraButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_toRight="@id/mapButton"
android:src="@drawable/photo"
android:gravity="center"
/>
<ImageButton
android:padding="10sp"
android:id="@+id/saveButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/add"
android:layout_toRight="@id/cameraButton"
/>
<ImageButton
android:padding="10sp"
android:id="@+id/viewGalleryButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/gallery"
android:layout_toRight="@id/saveButton"
android:visible="false"
/>
</RelativeLayout>
</LinearLayout>